calling api from TwitterApiProcessor class

--- a/Project1/Pages/Index.cshtml
+++ b/Project1/Pages/Index.cshtml
@@ -9,4 +9,4 @@
     <button type="submit">submit</button>
 </form>
 
-<h3>The Twitter user name is: @Model.TwitterUserName</h3>
+<h3>The Twitter user name is: @Model.Contex</h3>
