--- a/Project1/wwwroot/css/site.css
+++ b/Project1/wwwroot/css/site.css
@@ -94,7 +94,7 @@ input {
 .item-row {
     background-color: #595959;
     margin: 10px;
-    padding: 20px;
+    padding: 15px;
     border-radius: 3px;
     color: #fff;
     font-size: 16px;
@@ -103,6 +103,7 @@ input {
 
 .btn-info {
     font-size: 25px;
+    width: 100%;
 }
 
 .title {
@@ -136,4 +137,25 @@ input {
     font-size: 16px;
     text-align: center;
     box-shadow: 0px -1px 10px -4px rgba(0,0,0,0.75);
+}
+
+.tweet-profile-picuture {
+    float: left;
+    padding:5px;
+}
+
+.tweet-text {
+    float:none;
+}
+
+.save-to-db {
+    float: left;
+}
+
+.date {
+    
+}
+
+.subrow{
+   clear:both;
 }
