the problem is that there can only be one [BindProperty] on the page. I tried to find a solution where i could some how assign particular property to particular form, but i found none. Now i will split up search and listing features.

--- a/Project1/Pages/Shared/_Layout.cshtml
+++ b/Project1/Pages/Shared/_Layout.cshtml
@@ -23,6 +23,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Favourites">Favourites</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/test">Test</a>
+                        </li>
                     </ul>
                 </div>
             </div>
