--- a/Project1/Pages/Favourites.cshtml
+++ b/Project1/Pages/Favourites.cshtml
@@ -1,6 +1,39 @@
 ﻿@page
 @model Project1.Pages.FavouritesModel
+
 @{
+    ViewData["Title"] = "Favourites";
 }
 
-<h1>Favourites</h1>
+<div class="center-column">
+
+    <div class="title"><h1>FavTwitts</h1></div>
+
+    <div class="todo-list">
+        @foreach (var twitt in Model.DBTwitt)
+        {
+            <div class="item-row">
+                <div class="subrow">
+                    <div class="tweet-profile-picuture">
+                        <img src="@twitt.Profile_image_url" class="tweet-profile-picuture" />
+                        <p class="text-left">@twitt.Text</p>
+                    </div>
+                </div>
+                <div class="subrow">
+                    <div class="save-to-db">
+                        <form method="post" asp-page="Favourites" asp-page-handler="Remove">
+                            <input type="hidden" name="Id" value="@twitt.Id" />
+                            <input type="hidden" name="Text" value="@twitt.Text" />
+                            <input type="hidden" name="Author" value="@twitt.Author" />
+                            <input type="hidden" name="Profile_image_url" value="@twitt.Profile_image_url" />
+                            <input type="hidden" name="Created_at" value="@twitt.Created_at" />
+                            <input type="hidden" name="Saved_at" value="@twitt.Saved_at" />
+                            <button type="submit" class="btn btn-outline-danger">Delete</button>
+                        </form>
+                    </div>
+                    <div class="date"><p class="text-right">@twitt.Created_at</p></div>
+                </div>
+            </div>
+        }
+    </div>
+</div>
