Everything works as it should. Branch done

--- a/Project1/Pages/List.cshtml
+++ b/Project1/Pages/List.cshtml
@@ -29,16 +29,32 @@
                         </div>
                         <div class="subrow">
                             <div class="save-to-db">
-                                <form method="post" asp-page="List">
-                                    <input asp-for="DBTwitt.Id" type="hidden" name="Id" value="@twitt.Id" />
-                                    <input asp-for="DBTwitt.Text" type="hidden" name="Text" value="@twitt.Text" />
-                                    <input asp-for="DBTwitt.Author" type="hidden" name="Author" value="@Model.User.Data.Username" />
-                                    <input asp-for="DBTwitt.Profile_image_url" type="hidden" name="Profile_image_url" value="@Model.User.Data.Profile_image_url" />
-                                    <input asp-for="DBTwitt.Created_at" type="hidden" name="Created_at" value="@twitt.Created_at" />
-                                    <input asp-for="DBTwitt.Saved_at" type="hidden" name="Saved_at" value="@DateTime.Now" />
-                                    <input type="hidden" name="UserName" value="@Model.TwitterUserName" />
-                                    <button type="submit" class="btn btn-outline-info">Save</button>
-                                </form>
+                                @if (Model.ListOfTwittIdInDB.Contains(twitt.Id))
+                                {
+                                    <form method="post" asp-page="List" asp-page-handler="Delete">
+                                        <input asp-for="DBTwitt.Id" type="hidden" name="Id" value="@twitt.Id" />
+                                        <input asp-for="DBTwitt.Text" type="hidden" name="Text" value="@twitt.Text" />
+                                        <input asp-for="DBTwitt.Author" type="hidden" name="Author" value="@Model.User.Data.Username" />
+                                        <input asp-for="DBTwitt.Profile_image_url" type="hidden" name="Profile_image_url" value="@Model.User.Data.Profile_image_url" />
+                                        <input asp-for="DBTwitt.Created_at" type="hidden" name="Created_at" value="@twitt.Created_at" />
+                                        <input asp-for="DBTwitt.Saved_at" type="hidden" name="Saved_at" value="@DateTime.Now" />
+                                        <input type="hidden" name="UserName" value="@Model.TwitterUserName" />
+                                        <button type="submit" class="btn btn-outline-danger">Delete</button>
+                                    </form>
+                                }
+                                else
+                                {
+                                    <form method="post" asp-page="List" asp-page-handler="Create">
+                                        <input asp-for="DBTwitt.Id" type="hidden" name="Id" value="@twitt.Id" />
+                                        <input asp-for="DBTwitt.Text" type="hidden" name="Text" value="@twitt.Text" />
+                                        <input asp-for="DBTwitt.Author" type="hidden" name="Author" value="@Model.User.Data.Username" />
+                                        <input asp-for="DBTwitt.Profile_image_url" type="hidden" name="Profile_image_url" value="@Model.User.Data.Profile_image_url" />
+                                        <input asp-for="DBTwitt.Created_at" type="hidden" name="Created_at" value="@twitt.Created_at" />
+                                        <input asp-for="DBTwitt.Saved_at" type="hidden" name="Saved_at" value="@DateTime.Now" />
+                                        <input type="hidden" name="UserName" value="@Model.TwitterUserName" />
+                                        <button type="submit" class="btn btn-outline-info">Save</button>
+                                    </form>
+                                }
                             </div>
                             <div class="date"><p class="text-right">@twitt.Created_at</p></div>
                         </div>
